--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "IT Worker Template by Bootstrapious -  https://bootstrapious.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
